--- a/Views/Book/Category.cshtml
+++ b/Views/Book/Category.cshtml
@@ -62,10 +62,24 @@
     </div>
 
     <div class="container">
-            <div class="col-md-9 col-sm-12">
+            <h1>@ViewBag.Genre</h1>
+            <div>
+                
+                <form method="POST">
+                    <label>Raða eftir: 
+                        <select name="">
+
+                        </select>
+                    </label>
+                    <a asp-controller="Book" asp-action="Category" class="btn btn-info">Raða</a>
+                </form>
+                
+            </div>
+
+            <div class="col-md-9 col-sm-9">
                     @foreach(var book in @Model)
                     {
-                        <div class="col-xs-4">
+                        <div class="col-xs-4 books">
                         <span class="thumbnail">
                             <img src="@book.Image" alt="cover">
                             <h4>@book.Name</h4>
