--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -1,18 +1,18 @@
+@model BookCave.Models.ViewModels.BookDetailsViewModel
+
 <div class="container">
         	<div class="row">
                <div class="col-xs-4 item-photo">
-                    <img style="max-width:100%;" src="~/images/FrodiogFreyja_eignast_gaeludyr_72.jpg" />
+                    <img style="max-width:100%;" src="@Model.Image"/>
                 </div>
                 <div class="col-xs-5" style="border:0px solid gray">
-                    <!-- Datos del vendedor y titulo del producto -->
-                    <h3>Lord Of The Rings</h3>    
-                    <h5 style="color:#337ab7"> Stjörnugjöf fyrir <a href="#">Lord Of The Rings</a> · <small style="color:#337ab7">4.5 stjörnur</small></h5>
-                   
-
-                    <!-- Detalles especificos del producto -->
+                    
+                    <h3>@Model.Name</h3>    
+                    <h5 style="color:#337ab7"> Stjörnugjöf fyrir <a href="#">@Model.Name</a> · <small style="color:#337ab7">4.5 stjörnur</small></h5>
+                
                     <div class="section">
                         <h6 class="title-price"><small>Verð</small></h6>
-                        <h3 style="margin-top:0px;">1.990 kr</h3>
+                        <h3 style="margin-top:0px;">@Model.Price</h3>
                     </div>
                      
                     <div class="section" style="padding-bottom:20px;">
@@ -23,8 +23,7 @@
                             <div class="btn-plus"><span class="glyphicon glyphicon-plus"></span></div>
                         </div>
                     </div>                
-        
-                    
+                            
                     <div class="section" style="padding-bottom:20px;">
                         <button class="btn btn-success"><span style="margin-right:20px" class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Setja í körfu</button>
                         <h6><a href="#"><span class="glyphicon glyphicon-heart-empty" style="cursor:pointer;"></span> Setja á óskalistann</a></h6>
@@ -33,15 +32,12 @@
         
                 <div class="col-xs-9">
                     <ul class="menu-items">
-                        <li class="active">vörulýsing</li>
-                        <li>info</li>
-                        <li>info</li>
-                        <li>info</li>
+                        <li class="active">Lýsing</li>
                     </ul>
                     <div style="width:100%;border-top:1px solid silver">
                         <p style="padding:15px;">
                             <small>
-                            Þessi bók er rosa góð og fín og Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                @Model.Description
                             </small>
                         </p>
                     </div>
