--- a/Views/Home/loggedUser.cshtml
+++ b/Views/Home/loggedUser.cshtml
@@ -1,7 +1,7 @@
 <div class="container">
       <div class="row">
       <div class="col-md-5  toppad  pull-right col-md-offset-3 ">
-           <A href="edit.html" >Breyta</A>
+           <A asp-controller="Home" asp-action="Edit">Breyta</A>
 
         <A href="edit.html" >Útskrá</A>
        <br>
