login og register

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -153,6 +153,7 @@
                 </li>
             <!--  <li><a asp-area="" asp-controller="Home" asp-action="Login"><span class="glyphicon glyphicon-user"></span>Skráðu þig inn</a></li> -->
             </ul>
+            @await Html.PartialAsync("_LoginPartial")
         </div>
     </div>
     </nav>
