--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -8,11 +8,11 @@
                 <div class="col-xs-5" style="border:0px solid gray">
                     
                     <h3>@Model.Name</h3>    
-                    <h5 style="color:#337ab7"> Stjörnugjöf fyrir <a href="#">@Model.Name</a> · <small style="color:#337ab7">4.5 stjörnur</small></h5>
+                    <h5 style="color:#337ab7"> Stjörnugjöf fyrir <a href="#">@Model.Name</a> · <small style="color:#337ab7">@Model.Rating / 5</small></h5>
                 
                     <div class="section">
                         <h6 class="title-price"><small>Verð</small></h6>
-                        <h3 style="margin-top:0px;">@Model.Price</h3>
+                        <h3 style="margin-top:0px;">@Model.Price kr</h3>
                     </div>
                      
                     <div class="section" style="padding-bottom:20px;">
