--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -23,7 +23,7 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-rigt">
+    <ul class="nav navbar-nav navbar-right">
         <li>
             <a asp-area="" asp-controller="Account" asp-action="Register">Stofna aðgang</a>
         </li>
