--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="checkbox">
         <label>
-            <input type="checkbox" asp-for="RememberMe"/>Remember me
+            <input type="checkbox" asp-for="RememberMe"/>Muna eftir mér
         </label>
     </div>
     <div class="form-group">
