--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<BookCave.Models.ViewModels.BookListViewModel>
-<h1 class="carousel-heading">Nýjar bækur</h1>
+<h1 class="carousel-heading frontpage-heading">Nýjar bækur</h1>
 <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -59,7 +59,7 @@
     <br/>
     <br/>
     <br/>
-    <h1 class="carousel-heading">Vinsælar bækur</h1>
+    <h1 class="carousel-heading frontpage-heading">Vinsælar bækur</h1>
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
