--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css"/>
         <link rel="stylesheet" href="~/css/styles.css">
-        <link rel="stylesheet" ref="~/css/frontpage.css">
+        <link rel="stylesheet" href="~/css/frontpage.css">
         <link rel="stylesheet" href="~/css/addbook.css">
         <link rel="stylesheet" href="~/css/donate.css">
         <link rel="stylesheet" href="~/css/bookdetails.css">
