--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-xs-12">
 
-                <div id="imageCarousel" class="carousel slide" data-interval="2000"
+                <div id="imageCarousel" class="carousel slide" data-interval="10000"
                      data-ride="carousel" data-pause="hover" data-wrap="true">
 
                     <ol class="carousel-indicators">
@@ -20,9 +20,9 @@
                                 {
                                     <div class="col-xs-2">
                                     <img src=@Model[i].Image class="img-responsive">
-                                    <div class="carousel-caption">
-                                        <h3>@Model[i].Name</h3>
-                                        <p>@Model[i].Price</p>
+                                    <div class="frontpage-caption">
+                                        <h4>@Model[i].Name</h4>
+                                        <p>@Model[i].Date</p>
                                     </div>
                                     </div>
                                 }
@@ -34,9 +34,9 @@
                                 {
                                     <div class="col-xs-2">
                                     <img src=@Model[i].Image class="img-responsive">
-                                    <div class="carousel-caption">
-                                        <h3>@Model[i].Name</h3>
-                                        <p>@Model[i].Price</p>
+                                    <div class="frontpage-caption">
+                                        <h4>@Model[i].Name</h4>
+                                        <p>@Model[i].Date</p>
                                     </div>
                                     </div>
                                 }
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-xs-12">
 
-                <div id="imageCarousel" class="carousel slide" data-interval="2000"
+                <div id="imageCarousel" class="carousel slide" data-interval="10000"
                      data-ride="carousel" data-pause="hover" data-wrap="true">
 
                     <ol class="carousel-indicators">
@@ -81,8 +81,8 @@
                                 {
                                     <div class="col-xs-2">
                                     <img src=@Model[i].Image class="img-responsive">
-                                    <div class="carousel-caption">
-                                        <h3>@Model[i].Name</h3>
+                                    <div class="frontpage-caption">
+                                        <h4>@Model[i].Name</h4>
                                         <p>@Model[i].Price</p>
                                     </div>
                                     </div>
@@ -95,8 +95,8 @@
                                 {
                                     <div class="col-xs-2">
                                     <img src=@Model[i].Image class="img-responsive">
-                                    <div class="carousel-caption">
-                                        <h3>@Model[i].Name</h3>
+                                    <div class="frontpage-caption">
+                                        <h4>@Model[i].Name</h4>
                                         <p>@Model[i].Price</p>
                                     </div>
                                     </div>
