--- a/wwwroot/css/frontpage.css
+++ b/wwwroot/css/frontpage.css
@@ -7,3 +7,12 @@
 .frontpage-heading{
     text-align: center;
 }
+
+.frontpage-caption{
+    color: black;
+}
+
+.carousel-control.left, .carousel-control.right {
+    background-image:none !important;
+    filter:none !important;
+ }
