--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                                     <img src=@Model[i].Image class="img-responsive">
                                     <div class="frontpage-caption">
                                         <h4>@Model[i].Name</h4>
-                                        <p>@Model[i].Price</p>
+                                        <p>@Model[i].Date</p>
                                     </div>
                                     </div>
                                 }
@@ -36,7 +36,7 @@
                                     <img src=@Model[i].Image class="img-responsive">
                                     <div class="frontpage-caption">
                                         <h4>@Model[i].Name</h4>
-                                        <p>@Model[i].Price</p>
+                                        <p>@Model[i].Date</p>
                                     </div>
                                     </div>
                                 }
