--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -25,8 +25,8 @@
                     </div>                
                             
                     <div class="section" style="padding-bottom:20px;">
-                        <button class="btn btn-success"><span style="margin-right:20px" class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Setja í körfu</button>
-                        <h6><a href="#"><span class="glyphicon glyphicon-heart-empty" style="cursor:pointer;"></span> Setja á óskalistann</a></h6>
+                        <a class="btn btn-success" asp-controller="Home" asp-action="Cart"><span style="margin-right:20px" class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Setja í körfu</a>
+                        <h6><a href="Home"><span class="glyphicon glyphicon-heart-empty" style="cursor:pointer;"></span> Setja á óskalistann</a></h6>
                     </div>                                        
                 </div>                              
         
