--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="~/css/bookdetails.css">
         <link rel="stylesheet" href="~/css/category.css">
         <link rel="stylesheet" href="~/css/login.css">
-         <link rel="stylesheet" href="~/css/signup.css">
+        <link rel="stylesheet" href="~/css/signup.css">
 
     </environment>
     <environment exclude="Development">
@@ -168,6 +168,7 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> <!--added this for testing, harpa-->
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="~/js/addbook.js" asp-append-version="true"></script>
