--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -1,3 +1,4 @@
+@model List<BookCave.Models.ViewModels.BookListViewModel>
 <h1>Karfan þín</h1>
 <div class="container">
     <div class="row">
@@ -13,7 +14,29 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    @for(var i=0; i<6; i++)
+                    {
+                        <tr>
+                        <td class="col-sm-8 col-md-6">
+                        <div class="media">
+                            <a class="thumbnail pull-left" href="#"> <img class="media-object" src="" style="width: 72px; height: 72px;"> </a>
+                            <div class="media-body">
+                                <h4 class="media-heading"><a href="#">Harpa</a></h4>
+                                <h5 class="media-heading"> by <a href="#">Harpa</a></h5>
+                            </div>
+                        </div></td>
+                        <td class="col-sm-1 col-md-1" style="text-align: center">
+                        <input type="email" class="form-control" id="exampleInputEmail1" value="2">
+                        </td>
+                        <td class="col-sm-1 col-md-1 text-center"><strong>1.000 kr</strong></td>
+                        <td class="col-sm-1 col-md-1 text-center"><strong>2.000 kr</strong></td>
+                        <td class="col-sm-1 col-md-1">
+                        <button type="button" class="btn btn-danger">
+                            <span class="glyphicon glyphicon-remove"></span> Fjarlægja</button></td>
+                    </tr>
+                    }
+                    
+                    <!--tr>
                         <td class="col-sm-8 col-md-6">
                         <div class="media">
                             <a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png" style="width: 72px; height: 72px;"> </a>
@@ -31,26 +54,7 @@
                         <button type="button" class="btn btn-danger">
                             <span class="glyphicon glyphicon-remove"></span> Fjarlægja
                         </button></td>
-                    </tr>
-                    <tr>
-                        <td class="col-sm-8 col-md-6">
-                        <div class="media">
-                            <a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png" style="width: 72px; height: 72px;"> </a>
-                            <div class="media-body">
-                                <h4 class="media-heading"><a href="#">Lord Of The Rings</a></h4>
-                                <h5 class="media-heading"> by <a href="#">Harry Potter</a></h5>
-                            </div>
-                        </div></td>
-                        <td class="col-sm-1 col-md-1" style="text-align: center">
-                        <input type="email" class="form-control" id="exampleInputEmail1" value="2">
-                        </td>
-                        <td class="col-sm-1 col-md-1 text-center"><strong>1.000 kr</strong></td>
-                        <td class="col-sm-1 col-md-1 text-center"><strong>2.000 kr</strong></td>
-                        <td class="col-sm-1 col-md-1">
-                        <button type="button" class="btn btn-danger">
-                            <span class="glyphicon glyphicon-remove"></span> Fjarlægja
-                        </button></td>
-                    </tr>
+                    </tr-->
                     <tr>
                         <td>   </td>
                         <td>   </td>
