--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,21 +1,94 @@
 @model BookCave.Models.ViewModels.RegisterViewModel;
 
-<h1>Register</h1>
-
-<form class="form-horizontal" asp-controller="Account" asp-action="Register">
-    <div class="form-group">
-        <input type="email" asp-for="Email" class="form-control" placeholder="Skrifaðu netfangið þitt"/>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+             <section>      
+                <h1 class="entry-title"><span>Nýskráning</span> </h1>
+                <hr/>
+                <form class="form-horizontal" asp-controller="Account" asp-action="Register" method="POST">
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Netfang<span class="text-danger">*</span></label>
+                        <div class="col-md-8 col-sm-9">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                                <input type="email" asp-for="Email" class="form-control" placeholder="Vinsamlegast skrifaðu netfangið þitt"/>
+                                <span asp-validation-for="Email"></span><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Fornafn<span class="text-danger">*</span></label>
+                        <div class="col-md-8 col-sm-9">
+                            <input type="text" asp-for="FirstName" class="form-control" placeholder="Vinsamlegast skrifaðu fornafn hér"/>
+                            <span asp-validation-for="FirstName"></span><br>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Eftirnafn<span class="text-danger">*</span></label>
+                        <div class="col-md-8 col-sm-9">
+                            <input type="text" asp-for="LastName" class="form-control" placeholder="Vinsamlegast skrifaðu eftirnafn hér"/>
+                            <span asp-validation-for="LastName"></span><br>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Heimilisfang<span class="text-danger">*</span></label>
+                        <div class="col-md-8 col-sm-9">
+                            <input type="text" asp-for="Address" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/>
+                            <span asp-validation-for="Address"></span><br>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Veldu þér lykilorð<span class="text-danger">*</span></label>
+                        <div class="col-md-5 col-sm-8">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                <input type="password" asp-for="Password" class="form-control" placeholder="Veldu þér lykilorð (a.m.k. 8 stafir)"/>
+                                <span asp-validation-for="Password"></span><br>
+                            </div>   
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Staðfesta lykilorð<span class="text-danger">*</span></label>
+                        <div class="col-md-5 col-sm-8">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                <input type="password" asp-for="Password" class="form-control" placeholder="Staðfestu lykilorðið"/>
+                                <span asp-validation-for="Password"></span><br>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Símanúmer<br/>
+                        <small>valfrjálst</small></label>
+                        <div class="col-md-5 col-sm-8">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
+                                <input type="number" class="form-control" placeholder="Vinsamlegast skrifaðu símanúmerið þitt"/>
+                                <span asp-validation-for="PhoneNumber"></span><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Mynd<br/>
+                        <small>valfrjálst</small></label>
+                        <div class="col-md-5 col-sm-8">
+                            <div class="input-group"> <span class="input-group-addon" id="file_upload"><i class="glyphicon glyphicon-upload"></i></span>
+                                <input type="file" name="file_nm" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload"/>
+                                <span asp-validation-for="Image"></span><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-offset-3 col-md-8 col-sm-9"><span class="text-muted"><span class="label label-danger">Athugasemd:-</span> Með því að klikka á Stofna aðgang, ert þú að samþykkja <a asp-area="" asp-controller="Home" asp-action="Terms">skilmála og skilyrði</a> Book Cave.</span> </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-offset-3 col-xs-10">
+                            <input name="Submit" type="submit" value="Stofna aðgang" class="btn btn-primary"/>
+                        </div>
+                    </div>
+                </form>
+             </section>
+        </div>
     </div>
-    <div class="form-group">
-        <input type="text" asp-for="FirstName" class="form-control" placeholder="Skrifaðu fornafn"/>
-    </div>
-    <div class="form-group">
-        <input type="text" asp-for="LastName" class="form-control" placeholder="Skrifaðu eftirnafn"/>
-    </div>
-    <div class="form-group">
-        <input type="password" asp-for="Password" class="form-control" placeholder="Skrifaðu lykilorðið þitt"/>
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-default">Register</button>
-    </div>
-</form>
+</div>
