--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                             <ul class="dropdown-menu">
                                 <li><a asp-controller="Book" asp-action="Top10">Topp 10 listinn</a></li>
                                 <hr/>
-                                <li><a asp-controller="Book" asp-action="Category" asp-route-id ="allar">Allir flokkar</a></li>
+                                <li><a asp-controller="Book" asp-action="Category" asp-route-id ="allia">Allir flokkar</a></li>
                                 <li><a asp-controller="Book" asp-action="Category" asp-route-id="spenna">Spenna</a></li>
                                 <li><a asp-controller="Book" asp-action="Category" asp-route-id="gaman">Gaman</a></li>
                                 <li><a asp-controller="Book" asp-action="Category" asp-route-id="ævintýri">Ævintýri</a></li>
