--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,14 +55,14 @@
                             <ul class="dropdown-menu">
                                 <li><a asp-controller="Book" asp-action="Top10">Topp 10 listinn</a></li>
                                 <hr/>
-                                <li><a asp-controller="Book" asp-action="Category" asp-route-id ="allia">Allir flokkar</a></li>
-                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="spenna">Spenna</a></li>
-                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="gaman">Gaman</a></li>
-                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="ævintýri">Ævintýri</a></li>
+                                <li><a asp-controller="Book" asp-action="Category">Allir flokkar</a></li>
+                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="1">Spenna</a></li>
+                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="2">Gaman</a></li>
+                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="3">Ævintýri</a></li>
                                 <hr/>                                
-                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="barna">Barna og unglingabækur</a></li>
-                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="námsbækur">Námsbækur</a></li>
-                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="ljóð">Ljóð</a></li>
+                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="4">Barna og unglingabækur</a></li>
+                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="5">Námsbækur</a></li>
+                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="6">Ljóð</a></li>
                             </ul>
                 </li>
                 <li><a asp-controller="Home" asp-action="SpecialOrd">Sérpöntun</a></li>
