--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -11,7 +11,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
           <div class="panel panel-info">
             <div class="panel-heading">
-              <h3 class="panel-title">@Model.FirstName</h3>
+              <h3 class="panel-title">@Model.FirstName @Model.LastName</h3>
             </div>
             <div class="panel-body">
               <div class="row">
