--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -59,12 +59,12 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-3">Símanúmer<br/>
+                        <label class="control-label col-sm-3">Símanúmer<span class="text-danger">*</span></label>
                         <small>valfrjálst</small></label>
-                        <div class="col-md-5 col-sm-8">
+                        <div class="col-md-8 col-sm-9">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
-                                <input type="number" class="form-control" placeholder="Vinsamlegast skrifaðu símanúmerið þitt"/>
+                                <input type="text" asp-for="PhoneNumber" class="form-control" placeholder="Vinsamlegast skrifaðu símanúmer hér"/>
                                 <span asp-validation-for="PhoneNumber"></span><br>
                             </div>
                         </div>
