laga format Profile

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-3">Símanúmer<span class="text-danger">*</span></label>
+                        <label class="control-label col-sm-3">Símanúmer<br/>
                         <small>valfrjálst</small></label>
                         <div class="col-md-8 col-sm-9">
                             <div class="input-group">
