--- a/Views/Book/Category.cshtml
+++ b/Views/Book/Category.cshtml
@@ -72,7 +72,8 @@
                             <option value="name">Nafni bókar</option>
                         </select>
                     </label>
-                    <a asp-controller="Book" asp-action="Order" class="btn btn-info">Raða</a>
+                    <!--<a asp-controller="Book" asp-action="Category" class="btn btn-info">Raða</a>-->
+                    <input type="submit" value="Submit" class="btn btn-info"/>
                 </form>
             </div>
             <br/>
