--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<BookCave.Models.ViewModels.BookListViewModel>
 <h1 class="carousel-heading frontpage-heading">Nýjar bækur</h1>
-<div class="container">
+    <div class="container">
         <div class="row">
             <div class="col-xs-12">
 
@@ -14,12 +14,12 @@
                     </ol>
 
                     <div class="carousel-inner">
+                        <div class="carousel-inner">
                         <div class="item active">
                             <div class="row">
                                 @for (var i = 0; i < 6;i++)
                                 {
                                     <div class="col-xs-2">
-                                    //<img asp-net-controller="Book" asp-net-action="details" asp-route-id=@Model[i].Id src=@Model[i].Image class="img-responsive">
                                     <img src=@Model[i].Image class="img-responsive">
                                     <div class="frontpage-caption">
                                         <h4>@Model[i].Name</h4>
@@ -34,7 +34,6 @@
                                 @for (var i = 6; i < 12;i++)
                                 {
                                     <div class="col-xs-2">
-                                    //<a asp-controller="Book" asp-action="Details" asp-route-id="@Model[i].Id"><img src="@Model[i].Image" alt="cover"></a>
                                     <img src=@Model[i].Image class="img-responsive">
                                     <div class="frontpage-caption">
                                         <h4>@Model[i].Name</h4>
@@ -44,8 +43,10 @@
                                 }
                             </div>
                         </div>
+                            
                     </div>
                 </div>
+            </div>
 
                     <a href="#imageCarousel" class="carousel-control left" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left"></span>
@@ -56,8 +57,6 @@
                 </div>
 
             </div>
-        </div>
-    </div>
     <br/>
     <br/>
     <br/>
