--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -16,4 +16,8 @@
     background-color: #f2f2f2;
     padding: 25px;
   }
-  
+  .center{
+    width: 150px;
+      margin: 40px auto;
+      
+    }
