--- a/Views/Home/SpecialOrd.cshtml
+++ b/Views/Home/SpecialOrd.cshtml
@@ -17,6 +17,35 @@
             borist okkur og þá er gengið frá greiðslu- og afhendingarmáta. Erlendar vörur taka um 2-4 vikur 
             í pöntun en íslenskar vörur taka innan við viku.</p>
         
+        <h2>Upplýsingar fyrir sérpöntun</h2>
+                <form action="contact-us-send.php" method="post">
+        <ul>
+            <li><label for="name">Your Name</label> 
+                <input id="name" name="name" type="text" /></li>
+            <li><label for="email">Your Email</label>
+                <input id="email" name="email" type="text" /></li>
+            <li><label for="comment">Your Name</label>
+                <textarea id="comment" name="comment"></textarea></li>
+            <li><input id="submit" name="submit" type="submit" 
+                value="Click to Send Comments" /></li>
+        </ul>
+        </form>
+<!--
+        <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+        Nafn:<br>
+        <input type="text" name="name"><br>
+        Netfang:<br>
+        <input type="text" name="mail"><br>
+        Símanúmer:<br>
+        <input type="text" name="phone"><br>
+        <h2>Upplýsingar um sérpantaðar bækur:</h2>
+        Vinsamlegast setjið nafn bókar, höfundd, fjölda og ISPN(13 stafa) númer fyrir hverja sérpantaða bók
+        <br>
+        <input type="text" name="comment" size="50"><br><br>
+        <input type="submit" value="Senda fyrirspurn">
+        <input type="reset" value="Hreinsa">
+        </form>
+
         <h2>Upplýsingar um kaupanda</h2>
 
         <form>
@@ -125,7 +154,7 @@
         </form>
         </div>
 
-        </form>
+        </form>-->
     </div>
   </div>
 </div>
