--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -48,14 +48,14 @@
             <div class="row">
                 <div class="col-md-8">
                   <div class="page-header">
-                    <h1><small class="pull-right">@Model.Comments.Count athugasemdir</small> Athugasemdir </h1>
+                    <h1><small class="pull-right">@Model.Comments.Count athugasemd/ir</small> Athugasemdir </h1>
                   </div> 
                    <div class="comments-list">
                         @foreach(var comment in @Model.Comments)
                         {
                             <div class="media">
                                 <div class="media-body">
-                                    <h4 class="media-heading user_name">Baltej Singh</h4>
+                                    <h4 class="media-heading user_name">Ónafngreindur aðili</h4>
                                     <p>@comment.Text</p>
                                 </div>
                             </div>
