--- a/Views/Home/SpecialOrd.cshtml
+++ b/Views/Home/SpecialOrd.cshtml
@@ -16,7 +16,7 @@
         <p>Sérpantaðar vörur greiðast við afhendingu. Þú færð tilkynningu í tölvupósti þegar varan hefur 
             borist okkur og þá er gengið frá greiðslu- og afhendingarmáta. Erlendar vörur taka um 2-4 vikur 
             í pöntun en íslenskar vörur taka innan við viku.</p>
-        
+        <!--
         <h2>Upplýsingar fyrir sérpöntun</h2>
                 <form action="contact-us-send.php" method="post">
         <ul>
@@ -29,7 +29,7 @@
             <li><input id="submit" name="submit" type="submit" 
                 value="Click to Send Comments" /></li>
         </ul>
-        </form>
+        </form>-->
 <!--
         <form action="mailto:someone@example.com" method="post" enctype="text/plain">
         Nafn:<br>
@@ -44,7 +44,7 @@
         <input type="text" name="comment" size="50"><br><br>
         <input type="submit" value="Senda fyrirspurn">
         <input type="reset" value="Hreinsa">
-        </form>
+        </form>-->
 
         <h2>Upplýsingar um kaupanda</h2>
 
