--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -32,6 +32,36 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="control-label col-sm-3">Land<span class="text-danger">*</span></label>
+                        <div class="col-md-8 col-sm-9">
+                            <select asp-for="CountryId">
+                                <option value="1">Ísland</option>
+                                <option value="2">Danmörk</option>
+                                <option value="3">Noregur</option>
+                                <option value="4">Svíþjóð</option>
+                                <option value="5">Finnland</option>
+                                <option value="6">England</option>
+                                <option value="7">Bandaríkin</option>
+                            </select>
+                            <!--input type="text" asp-for="Address" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/-->
+                            <span asp-validation-for="CountryId"></span><br>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Borg/Bær<span class="text-danger">*</span></label>
+                        <div class="col-md-8 col-sm-9">
+                            <input type="text" asp-for="City" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/>
+                            <span asp-validation-for="City"></span><br>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">Póstnúmer<span class="text-danger">*</span></label>
+                        <div class="col-md-8 col-sm-9">
+                            <input type="text" asp-for="ZIP" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/>
+                            <span asp-validation-for="ZIP"></span><br>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="control-label col-sm-3">Heimilisfang<span class="text-danger">*</span></label>
                         <div class="col-md-8 col-sm-9">
                             <input type="text" asp-for="Address" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/>
