--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                             <ul class="dropdown-menu">
                                 <li><a asp-controller="Book" asp-action="Top10">Topp 10 listinn</a></li>
                                 <hr/>
-                                <li><a asp-controller="Book" asp-action="Category">Allir flokkar</a></li>
+                                <li><a asp-controller="Book" asp-action="Category" asp-route-id="0">Allir flokkar</a></li>
                                 <li><a asp-controller="Book" asp-action="Category" asp-route-id="1">Spenna</a></li>
                                 <li><a asp-controller="Book" asp-action="Category" asp-route-id="2">Gaman</a></li>
                                 <li><a asp-controller="Book" asp-action="Category" asp-route-id="3">Ævintýri</a></li>
