--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -1,4 +1,5 @@
-@model List<BookCave.Models.ViewModels.BookListViewModel>
+@model List<BookCave.Models.ViewModels.BookDetailsViewModel>
+
 <h1>Karfan þín</h1>
 <div class="container">
     <div class="row">
@@ -14,21 +15,21 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @for(var i=0; i<6; i++)
+                    @foreach(var book in @Model)
                     {
                         <tr>
                         <td class="col-sm-8 col-md-6">
                         <div class="media">
                             <a class="thumbnail pull-left" href="#"> <img class="media-object" src="" style="width: 72px; height: 72px;"> </a>
                             <div class="media-body">
-                                <h4 class="media-heading"><a href="#">Harpa</a></h4>
-                                <h5 class="media-heading"> by <a href="#">Harpa</a></h5>
+                                <h4 class="media-heading">@book.Name</h4>
+                                <h5 class="media-heading"> by Vigdís Birna</h5>
                             </div>
                         </div></td>
                         <td class="col-sm-1 col-md-1" style="text-align: center">
-                        <input type="email" class="form-control" id="exampleInputEmail1" value="2">
+                        <input type="email" class="form-control" id="exampleInputEmail1" value="@book.Copies">
                         </td>
-                        <td class="col-sm-1 col-md-1 text-center"><strong>1.000 kr</strong></td>
+                        <td class="col-sm-1 col-md-1 text-center"><strong>@book.Price</strong></td>
                         <td class="col-sm-1 col-md-1 text-center"><strong>2.000 kr</strong></td>
                         <td class="col-sm-1 col-md-1">
                         <button type="button" class="btn btn-danger">
