--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -20,10 +20,9 @@
             
                     <h6 class="title-attr"><small>Fjöldi</small></h6>                    
                     <div>
-                        <input id="copies" type="number" name="Copies" min="1">
-                        <div>
-                            <input type="submit" class="btn btn-success" value="Setja í körfu"/>
-                        </div>
+                        <input id="copies" type="number" asp-for="Copies" min="1" value="1">
+                        <br/>
+                        <input type="submit" class="btn btn-success" value="Setja í körfu"/>
                         
                         <!--<div class="btn-minus"><span class="glyphicon glyphicon-minus"></span></div>
                             <input value="1" />
