--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -20,7 +20,7 @@
                       </tr>
                       <tr>
                         <td>Land:</td>
-                        <td>@Model.CountryId</td>
+                        <td>@Model.Country</td>
                       </tr>
                       <tr>
                         <td>Borg/Bær:</td>
@@ -33,10 +33,6 @@
                       <tr>
                         <td>Heimilisfang:</td>
                         <td>@Model.Address</td>
-                      </tr>
-                      <tr>
-                        <td>Netfang:</td>
-                        <td><a href="mailto:info@support.com">@Model.Email</a></td>
                       </tr>
                         <td>Símanúmer:</td>
                         <td>@Model.PhoneNumber<br></td>
