--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -153,6 +153,7 @@
         <script src="~/js/bookdetails.js" asp-append-version="true"></script>
         <script src="~/js/frontpage.js" asp-append-version="true"></script>
         <script src="~/js/category.js" asp-append-version="true"></script>
+        <!--script src="~/js/imageupload.js" asp-append-version="true"></script-->
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
